tests/machine/x/pl/cross_join.out
ERROR: /workspace/mochi/tests/machine/x/pl/cross_join.pl:10:11: Syntax error: Operator expected

