tests/machine/x/pl/cross_join.pl
:- style_check(-singleton).
main :-
    % unsupported: unsupported primary
    % unsupported: unsupported primary
    % unsupported: unsupported primary
    write("--- Cross Join: All order-customer pairs ---"),
    nl,
    (member(Entry, Result),
        % unsupported: print with one arg supported
        true.
    :- initialization(main, main).
